value: Handle serializing NULL GValueArray

Consider them as an empty array and do not segfault...

https://bugzilla.gnome.org/show_bug.cgi?id=786670